Fixed layout issues for news

--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -1,5 +1,5 @@
 .grid-container {
-  margin: 16px 16px 44px;
+  margin: 16px 16px 56px;
 }
 
 .dashboard-card {
